<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/main">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@+id/btnStartTraining"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/app_logo" />

    <Button
        android:id="@+id/btnStartTraining"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:text="@string/start_training"
        android:textSize="23sp"
        app:layout_constraintBottom_toTopOf="@id/btnManagePlans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLogo" />

    <Button
        android:id="@+id/btnManagePlans"
        android:layout_width="290dp"
        android:textSize="18sp"
        android:layout_height="wrap_content"
        android:text="@string/manage_trainings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnStartTraining"
        app:layout_constraintBottom_toTopOf="@+id/btnHistory"/>

    <Button
        android:id="@+id/btnHistory"
        android:layout_width="290dp"
        android:textSize="18sp"
        android:layout_height="wrap_content"
        android:text="@string/training_history"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnManagePlans"
        app:layout_constraintBottom_toTopOf="@+id/btnAbout"/>

    <Button
        android:id="@+id/btnAbout"
        android:layout_width="290dp"
        android:textSize="18sp"
        android:layout_height="wrap_content"
        android:text="@string/about_app"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnHistory"
        android:layout_marginBottom="100dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>